my first Websit version 2.0

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ FULL NAME: jyothi swaroop
 <h2>
 COLLEGE NAME: S.R.K.R ENG COLLEGE
 </h2>
-<img src="http://m.ak.fbcdn.net/profile.ak/hprofile-ak-frc1/369360_100001262995458_1692758875_q.jpg"/>
 <br/>
-<a href="https://www.facebook.com/jyooo.007">my facebook profile</a>
+<a href="https://www.facebook.com/jyooo.007"><img src="http://profile.ak.fbcdn.net/hprofile-ak-frc1/369360_100001262995458_1692758875_n.jpg"/></a>
 </body>
 </html>
