my first website version 3.0

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@ SWAROOP
 </title>
 </head>
 <body>
-<h1 font-size=10em;>
+<h1>
+<center>
+<div style="background-color:red;font-family:arial;font-size:1.5em;padding:5px;">
 FULL NAME: jyothi swaroop
+</div>
+</center>
 </h1>
 <h2>
 COLLEGE NAME: S.R.K.R ENG COLLEGE
