my first website version 4.0

--- a/index.html
+++ b/index.html
@@ -7,15 +7,48 @@ SWAROOP
 <body>
 <h1>
 <center>
-<div style="background-color:red;font-family:arial;font-size:1.5em;padding:5px;">
-FULL NAME: jyothi swaroop
+<div style="background-color:red;font-family:arial;font-size:3em;padding:10px;wdith:100%;">
+<img src="images/swaroop.jpg"/>
+ jyothi swaroop
 </div>
 </center>
 </h1>
 <h2>
-COLLEGE NAME: S.R.K.R ENG COLLEGE
-</h2>
+<div style="background-color:green;padding:10px;wdith:100%;">
+my details
+full name: Meka jyothi swaroop
 <br/>
-<a href="https://www.facebook.com/jyooo.007"><img src="http://profile.ak.fbcdn.net/hprofile-ak-frc1/369360_100001262995458_1692758875_n.jpg"/></a>
+DOB: 12-oct-1992
+<br/>
+father name: M M varma
+<br/>
+SSC : goutam model school
+<br>
+SSc persentage: 78%
+<br/>
+inter : narayana college
+<br/>
+inter persentage: 80%
+<br/>
+COLLEGE NAME: S.R.K.R ENG COLLEGE
+</div>
+</h2>
+<h3>
+<div style="background-color:#6599ff; font-size=2;padding:10px;wdith=100%;">
+my Highlights
+</div>
+</h3>
+<h4>
+*gold madel at swiming
+<br/>
+*good at C++ programing
+<br/>
+</h4>
+<br/>
+<h5>
+follow me
+</h5>
+<a href="https://www.facebook.com/jyooo.007"><img src="images/fb.png"/></a>
+<a href="https://www.twitter.com/jyothiswaroop05"><img src="images/twitter.png"/></a>
 </body>
 </html>
