my first website version 5.0

--- a/index.html
+++ b/index.html
@@ -3,48 +3,58 @@
 <title>
 SWAROOP
 </title>
+<style type="text/css">
+.myclass
+{
+ font-size:2em;
+ padding:10px;
+ width:100%;
+ font-family:arial;
+}
+</style>
 </head>
 <body>
 <h1>
 <center>
-<div style="background-color:red;font-family:arial;font-size:3em;padding:10px;wdith:100%;">
+<div class="myclass" style="background-color:red;">
 <img src="images/swaroop.jpg"/>
  jyothi swaroop
 </div>
 </center>
 </h1>
 <h2>
-<div style="background-color:green;padding:10px;wdith:100%;">
+<div class="myclass"style="background-color:green;">
 my details
-full name: Meka jyothi swaroop
-<br/>
-DOB: 12-oct-1992
-<br/>
-father name: M M varma
-<br/>
-SSC : goutam model school
-<br>
-SSc persentage: 78%
-<br/>
-inter : narayana college
-<br/>
-inter persentage: 80%
-<br/>
-COLLEGE NAME: S.R.K.R ENG COLLEGE
+<ul>
+<li>full name: Meka jyothi swaroop</li>
+<li>DOB: 12-oct-1992</li>
+<li>father name: M M varma</li>
+<li>SSC : goutam model school</li>
+<li>SSc persentage: 78%</li>
+<li>inter : narayana college</li>
+<li>inter persentage: 80%</li>
+<li>COLLEGE NAME: S.R.K.R ENG COLLEGE</li>
+</ul>
 </div>
 </h2>
 <h3>
-<div style="background-color:#6599ff; font-size=2;padding:10px;wdith=100%;">
+<div class="myclass"style="background-color:#6599ff;">
 my Highlights
 </div>
 </h3>
 <h4>
-*gold madel at swiming
-<br/>
-*good at C++ programing
-<br/>
+<ol>
+<li>gold madel at swiming</li>
+<li>good at C, C++ and JAVA programing</li>
+</ol>
 </h4>
 <br/>
+<h6>
+<div class="myclass" style="background-color:#FF9900;">
+my github
+</div>
+</h6>
+<a href="https://github.com/mekaswaroop">my github</a>
 <h5>
 follow me
 </h5>
