my varsion template :v1.0

--- a/index.html
+++ b/index.html
@@ -4,61 +4,98 @@
 SWAROOP
 </title>
 <style type="text/css">
+html,body
+{
+ font-family:arial;
+ padding: 0;
+ margin: 0;
+}
+.myProfilePic
+{
+ -webkit-border-radius:999px;
+ -moz-border-radius:999px;
+ border-radius:999px;
+ height: 200px;
+ width: auto;
+}
 .myclass
 {
- font-size:2em;
- padding:10px;
- width:100%;
+  margin-left: 25%;
+ 	float:left;
+ 	clear: both;
+}
+.aboutMe
+{
+ 	float:left;
+ 	width: 100%;
+ 	padding-top:5px;
+ 
+}
+.myName
+{
+	font-size: 2.5em;
+	padding: 5px;
+	width: 200px;
+	float: left;
+
+
+}
+
+.headerdiv
+{
+	 font-size:2em; 
  font-family:arial;
+ border-bottom: 1px solid #e1dad3;
+min-height: :300px;
+	float: left;
+	width: 100%;
+}
+.heading
+{
+	font-size: 1.5em;
+	text-decoration: underline;
+}
+.styling
+{
+	font-size: 1.5em;
+	margin-top: 10px;
+	background-color: rgba(101, 153, 255, 1);
+
+
 }
 </style>
 </head>
 <body>
+
+	<div class="headerdiv">
+			<div class="myclass">
+		<img class="myProfilePic" src="images/ntr.JPG"/>
+	</div>
+	<div class="myName">Jyothi Swaroop</div>
+
+</div>
+<div class="aboutMe styling"> 
+	<span class="heading">About Me</span>
+	<p>
+		I'm M Jothi Swaroop .i m a student doing my graduation in S.R.K.R ENG
+COLLEGE,BHIMAVARAM.<br />i m a executive body member of CSI(Computer science of India).<br/>i m good in communication skills
+and i m a good learner.i have learnt c,c++,java,html etc.
+</p>
+
+</div>
+
+<div class="aboutMe styling">
+<span class="heading">portfolio</span>
+<p>my portfoliouter science engineering
+</p>
+</div>
+<div class="aboutMe styling">
+<span class="heading">Contact ME</span>
+<p>email Id: jyothiswaroop055@gmail.com <br/>phone no:9966544111</p>
+</div>
 <h1>
-<center>
-<div class="myclass" style="background-color:red;">
-<img src="images/swaroop.jpg"/>
- jyothi swaroop
-</div>
-</center>
+<a href="https://www.facebook.com/jyooo.007"><img class="myProfilePic" src="images/fb.png"/></a>
+<a href="https://www.twitter.com/jyothiswaroop05"><img class="myProfilePic" src="images/twitter.png"/></a>
 </h1>
-<h2>
-<div class="myclass"style="background-color:green;">
-my details
-<ul>
-<li>full name: Meka jyothi swaroop</li>
-<li>DOB: 12-oct-1992</li>
-<li>father name: M M varma</li>
-<li>SSC : goutam model school</li>
-<li>SSc persentage: 78%</li>
-<li>inter : narayana college</li>
-<li>inter persentage: 80%</li>
-<li>COLLEGE NAME: S.R.K.R ENG COLLEGE</li>
-</ul>
-</div>
-</h2>
-<h3>
-<div class="myclass"style="background-color:#6599ff;">
-my Highlights
-</div>
-</h3>
-<h4>
-<ol>
-<li>gold madel at swiming</li>
-<li>good at C, C++ and JAVA programing</li>
-</ol>
-</h4>
-<br/>
-<h6>
-<div class="myclass" style="background-color:#FF9900;">
-my github
-</div>
-</h6>
-<a href="https://github.com/mekaswaroop">my github</a>
-<h5>
-follow me
-</h5>
-<a href="https://www.facebook.com/jyooo.007"><img src="images/fb.png"/></a>
-<a href="https://www.twitter.com/jyothiswaroop05"><img src="images/twitter.png"/></a>
 </body>
 </html>
