my varsion template :v2.1 Added Forms

--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@ min-height: :300px;
 	float: right; 
 
 }
-input[type="text"]
+input[type="text"],input[type="submit"],select
 {
 	padding: 5px;
 	width: 250px;
 	font:1em;
 }
-select
+
+textarea
 {
 	padding: 5px;
 	width: 250px;
