--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and i m a good learner.i have learnt c,c++,java,html etc.
 <input type="checkbox" id="web_development">Web Development<br/>
 <input type="checkbox" id="mobile">Mobile<br/>
 <br/>
-<input type="button" value="sentmail" id="sentmail"/><br/>
+<input type="button" value="sendmail" id="sendmail"/><br/>
 <input type="submit" name="submit">
 <input type="button" value="show" id="show">
 <input type="button" value="hide" id="hide">
@@ -75,10 +75,12 @@ and i m a good learner.i have learnt c,c++,java,html etc.
 <a href="https://www.twitter.com/jyothiswaroop05"><img class="logo" src="images/t.png"/></a>
 <a href="https://github.com/mekaswaroop"><img class="logo" src="images/g.png"/></a>
 <a href="http://www.skype.com/en/"><img class="logo" src="images/s.png"/></a>
-
 </p>
-
-
+<br/>
+<br/>
+<div class="result" id="result"></div>
+<input type="button" id="sucessFul" value="sucessful">
+<input type="button" id="failure" value="failure">
 
 </body>
 </html>
