my version 6.0 with linked application
;

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ SWAROOP
 
 	<div class="headerdiv">
 			<div class="myclass">
-		<img class="myProfilePic" src="images/ntr.JPG"/>
+		<img class="myProfilePic" src="http://i.ebayimg.com/00/s/MTYwMFgxNjAw/$(KGrHqNHJEQE-9u8NVnpBPyrkuNhD!~~60_35.JPG"/>
 	</div>
 	<div class="myName">Jyothi Swaroop</div>
 
@@ -24,24 +24,38 @@ SWAROOP
 	<span class="heading">About Me</span></div>
 	<div class="Des" id="aboutmeDes">
 	<p>
-		I'm M Jothi Swaroop .i m a student doing my graduation in S.R.K.R ENG
-COLLEGE,BHIMAVARAM.<br />i m a executive body member of CSI(Computer science of India).<br/>i m good in communication skills
-and i m a good learner.i have learnt c,c++,java,html etc.
+		Hey,<br/><br/>
+		I'm <b>Jothi Swaroop</b>. My friends call me  Jyothi. <br/>
+		Im am currently perusing my fial year of Engineering at S.R.K.R Engineering College, Bhimavaram.
+		<br />
+		Im an executive body member of CSI(Computer science of India) @ SRKR and I have amazing communication skills.
+		<br/> I love to learn new things. I am good at programming languages such as C,C++, Java and Web technologies such as HTML(5)/ CSS/ Jquery.
+		<br/> I have also learnt a fair bit of Mobile development and have built applications using PhoneGap.
+		<br/>
+		Check out my Portfolio section below to see my applications in action, and if you are interested in learning them, I am also writing a series of tutorials to explain them to beginners. 
+		<br/>
+		I am currenlty very busy with my final year project, but I will keep updating the tutorials whenever I get a chance. 
+
 </p>
 </div>
 
 <div class="aboutMe styling" id="portfolioMe">[+]
-    <span class="heading">portfolio</span></div>
+    <span class="heading">Portfolio</span></div>
 <div class="Des" id="protfolioDes">
-<p>my portfoliouter science engineering
+<p>My Portfolio.
+</p><br/><p>
+<a href="https://github.com/mekaswaroop" target="blank">My GitHub Accout</a> If you want access to source code of this website and my other apps <br/>
+<a href="todo.html" target="blank">Example of Todo Appilication in JQuery</a><br/>
+<a href="weather.html" target="blank">Example of a Weather Application using the OpenWeather API, JSON and JQuery</a><br/>
+<a href="movieName.html" target="blank">Demo of a MoviePoster application, again using the 'themoviedb.org' API for developers.</a><br/>
 </p>
 </div>
 
 <div class="aboutMe styling" id="contactMe">[+]
-<span class="heading">Contact ME</span></div>
+<span class="heading">Contact </span></div>
 <div class="Des" id="contactDes">
 <p>email Id: jyothiswaroop055@gmail.com <br/>phone no:9966544111</p>
-<form action="" method="post">
+<!--<form action="" method="post">
 <input type="text" name="name" id="name" value="plase enter your name"/><br/>
 <textarea name="message" id="message" rows="10" cols="50">please type me a message here</textarea><br/>
 </form>
@@ -62,11 +76,11 @@ and i m a good learner.i have learnt c,c++,java,html etc.
 <input type="checkbox" id="web_development">Web Development<br/>
 <input type="checkbox" id="mobile">Mobile<br/>
 <br/>
-<input type="button" value="sendmail" id="sendmail"/><br/>
-<input type="submit" name="submit">
+<input type="button" value="sendmail" id="sendmail"/><br/>-->
+<!--<input type="submit" name="submit">
 <input type="button" value="show" id="show">
 <input type="button" value="hide" id="hide">
-<input type="button" value="background" id="background">
+<input type="button" value="background" id="background">-->
 </div>
 
 <p style="text-align:center;">
@@ -76,11 +90,6 @@ and i m a good learner.i have learnt c,c++,java,html etc.
 <a href="https://github.com/mekaswaroop"><img class="logo" src="images/g.png"/></a>
 <a href="http://www.skype.com/en/"><img class="logo" src="images/s.png"/></a>
 </p>
-<br/>
-<br/>
-<div class="result" id="result"></div>
-<input type="button" id="sucessFul" value="sucessful">
-<input type="button" id="failure" value="failure">
 
 </body>
 </html>
