latest commit of my website including my apps in portfolio excluding the mobile apps. this commit also includes 2 comparision documents describing my learning and comparing my knowledge on what I knew before begining the course with what I know today after completion of the course

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ SWAROOP
 	<p>
 		Hey,<br/><br/>
 		I'm <b>Jothi Swaroop</b>. My friends call me  Jyothi. <br/>
-		Im am currently perusing my fial year of Engineering at S.R.K.R Engineering College, Bhimavaram.
+		Im am currently perusing my final year of Engineering at S.R.K.R Engineering College, Bhimavaram.
 		<br />
 		Im an executive body member of CSI(Computer science of India) @ SRKR and I have amazing communication skills.
 		<br/> I love to learn new things. I am good at programming languages such as C,C++, Java and Web technologies such as HTML(5)/ CSS/ Jquery.
@@ -44,10 +44,16 @@ SWAROOP
 <div class="Des" id="protfolioDes">
 <p>My Portfolio.
 </p><br/><p>
+<div class="portfolioSub">My Web Application</div>
 <a href="https://github.com/mekaswaroop" target="blank">My GitHub Accout</a> If you want access to source code of this website and my other apps <br/>
 <a href="todo.html" target="blank">Example of Todo Appilication in JQuery</a><br/>
 <a href="weather.html" target="blank">Example of a Weather Application using the OpenWeather API, JSON and JQuery</a><br/>
 <a href="movieName.html" target="blank">Demo of a MoviePoster application, again using the 'themoviedb.org' API for developers.</a><br/>
+<div class="portfolioSub">My AppStore Application</div>
+<div><img src="images\android.png"/></div>
+<div class="appstr">
+<a href="https://play.google.com/store/apps/details?id=com.phonegap.weatherapp&hl=en" target="blank"><img src="images\GPS1.png"> GPS Weather App</a>
+</div>
 </p>
 </div>
 
