--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@ SWAROOP
 <a href="todo.html" target="blank">Example of Todo Appilication in JQuery</a><br/>
 <a href="weather.html" target="blank">Example of a Weather Application using the OpenWeather API, JSON and JQuery</a><br/>
 <a href="movieName.html" target="blank">Demo of a MoviePoster application, again using the 'themoviedb.org' API for developers.</a><br/>
-<div class="portfolioSub">My AppStore Application</div>
+<div class="portfolioSub">My AppStore Applications</div>
 <div><img src="images\android.png"/></div>
-<div class="appstr">
-<a href="https://play.google.com/store/apps/details?id=com.phonegap.weatherapp&hl=en" target="blank"><img src="images\GPS1.png"> GPS Weather App</a>
+<div class="appstrA">
+<a href="https://play.google.com/store/apps/details?id=com.phonegap.weatherapp&hl=en" target="blank"><img src="images\gps2.png"> GPS Weather App</a>
+
 </div>
+<div class="appstrB"><a href="https://play.google.com/store/apps/details?id=com.warking.movieposterapp" target="blank"><img src="images\mveapp.png"> MovePoster and trailer App</a></div>
 </p>
 </div>
 
